--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,17 +1,18 @@
 
 mixin storeForm(store = {})
-	form(action="/add" method="POST").card
+	form(action=`/add/${store._id || ''}` method="POST").card
 		label(for="name") Name
-		input(type="text" name="name")
+		input(type="text" name="name" value=store.name)
 		
 		label(for="description") Description
-		textArea(name="description")
+		textArea(name="description")=store.description
 
 		- const choices = ["Wifi", "Open Late", "Family Freindly", "Vegetarian", "Licensed"]
+		- const tags = store.tags || []
 		ul.tags
 			each choice in choices
 				div.tag.tag__choice
-					input(type="checkbox", id=choice, value=choice, name="tags")
+					input(type="checkbox", id=choice, value=choice, name="tags" checked=(tags.includes(choice)))
 					label(for=choice) #{choice}
 
 		input(type="submit" value="Save →").button 
