--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -2,10 +2,20 @@
 mixin storeForm(store = {})
 	form(action=`/add/${store._id || ''}` method="POST").card
 		label(for="name") Name
-		input(type="text" name="name" value=store.name)
+		input(type="text" name="name" value=store.name required)
 		
 		label(for="description") Description
 		textArea(name="description")=store.description
+
+		//- address
+		label(for='address') Address
+		input(type='text' id='address' name='location[address]' value=(store.location && store.location.address) required)
+		
+		//- coordinates; lng / lat
+		label(for='lng') Lng
+		input(type='text' id='lng', name='location[coordinates][0]' value=(store.location && store.location.coordinates[0]) required)
+		label(for='lat') lat
+		input(type='text' id='lat', name='location[coordinates][1]' value=(store.location && store.location.coordinates[1]) required)
 
 		- const choices = ["Wifi", "Open Late", "Family Freindly", "Vegetarian", "Licensed"]
 		- const tags = store.tags || []
